--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
     <title>Document</title>
 </head>
 <body>
+  <body="backgroundimage Home>
   <a href="index.html">Home</a>  
   <a href= "aboutme.html">About me</a>
   <a href= "unit1.html">Unit 1</a>
   <a href= "unit2.html">Unit 2</a>
+  <a href= "contactus.html">contact us</a>
 </body>
 </html>
     
 <h1>welcome to kings word</h1>
+
+
+ <img src="Smiley-face-emoticon-575.jpg" alt="Smiley face" height="220" width="250" >
+
+
 <br>
+
       we are here to help you to get fun time 
 <br>
-<img src="smiley.gif" alt="Smiley face" >
 
-                 <img src="king.jpg">
-                 <p>   <h2> ABUT ME</h2>
 
-I AM TO INTERESTED SINS 1998 I START
+                 
+                 <p>   <h1> ABOUT ME</h1>
+
+<h3> I AM TO INTERESTED SINS 1998 I START
  WORKING WITH IT AT 2000 FIRMWARE I WORK HARD AND I GET 
-  MY SHOP AT 2005. 
+  MY SHOP AT 2005. </h3>
 
                  </p>
 
 
 <br>
-<a href= "https://www.youtube.com/watch?v=uMLQEco892U">Video</a>
+
 
 
 <p>
