--- a/unit2.html
+++ b/unit2.html
@@ -1,14 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Document</title>
+</head>
+<body>
+    
+
 <a href="index.html">Home</a>  
 <a href= "aboutme.html">About me</a>
 <a href= "unit1.html">Unit 1</a>
 <a href= "unit2.html">Unit 2</a>
+<a href= "contactus.html">contact us</a>
 <div>
 
  <h1> 
      1.5 Describing copyright and other constraints affecting websites 
         </h1>
         <br>
-      Copyright is the right of someone who creates an original image. 
+      <h3>Copyright is the right of someone who creates an original image. 
  As soon as an image is created it has copyright 
 and the person who created it owns the rights to that image. 
  Only the owner has the right to reproduce the  work,
@@ -26,7 +39,7 @@ only used part of it.
 It is always best to ask the owner of 
 the image if you are not sure for their permission.
 I think it is better to use your own photographs where 
-possible because then you know they are your own property.
+possible because then you know they are your own property.</h3>
     </br>
 
     <h1>1.6 Describing access issues that need taking into
@@ -35,18 +48,23 @@ possible because then you know they are your own property.
         how we can overcome them
         </h1>
         <br>
-        I will add disabilities option AND LINK IT WITH WED 
+        <h3>I will add disabilities option AND LINK IT WITH WED </h3>
     </br>
 <h1>1.7 Describe which are the appropriate file types for websites </h1>
 
 </br>
 <br>
+<h3>
 AVI — Audio/Video Interleaved
 CSS — Cascading StyleSheet
 DOC — Microsoft Word DOCument
 HTML/ .HTM — HyperText Markup Language file
+</h3>
 </br>
 
 
 
 </div>
+
+</body>
+</html>
