--- a/unit1.html
+++ b/unit1.html
@@ -1,15 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Document</title>
+</head>
+<body class= "backgroundUnit1">
+    
+
+
 <a href="index.html">Home</a>  
 <a href= "aboutme.html">About me</a>
 <a href= "unit1.html">Unit 1</a>
 <a href= "unit2.html">Unit 2</a>
+<a href= "contactus.html">contact us</a>
 <div>
 
     <h1> 
         1.1 Describing the purpose of IT in modern business 
          </h1>
          <br>
-         IT IS GOOD TO KNOW MORE ABOUT IT  SPECIALLY CODING BECAUSE YOU  WILL 
-LEARNING HOW TO TAKE TO THE COMPUTER AND BUILT YOUR PALEN WHATEVER BEEN AND YOU BE ENABLED TO FIX A PROGAMER AND DUIT A APP AND WEB .
+    <h3>IT IS GOOD TO KNOW MORE ABOUT IT 
+ SPECIALLY CODING BECAUSE YOU  WILL 
+LEARNING HOW TO TAKE TO THE COMPUTER AND BUILT YOUR 
+PALEN WHATEVER BEEN AND YOU BE ENABLED TO FIX 
+A PROGAMER AND DUIT A APP AND WEB .</h3>
 </br>
 
 IT IS A NEW WORD 
@@ -22,7 +39,7 @@ IT IS A NEW WORD
      successful? What tools? What skills? 
      </h1>
    <br>
-    YOU SHOULD  HAVE A GOOD KNOWLEDGE WITH 
+  <h3>  YOU SHOULD  HAVE A GOOD KNOWLEDGE WITH 
 YOU BUSINESS AND THE TEAME 
 YOU WORK WITH IT.
 E.X FIXING CLOUDING FOR A WEB OR APP :
@@ -34,17 +51,17 @@ TRY TO BUITING  YOU PALEN AT TRELLO OR AT NOT TO GET ALL YOU POINT
 YOU NEED .
   
 WITH TOOLS I WILL GO HAD WITH X COUD . A BUT THE skill WILL
- LOOKOUT  AND MAKE IT WORK FULL.
+ LOOKOUT  AND MAKE IT WORK FULL.</h3>
             </br>
  <h1>1.3 Plan and carry out tasks using IT – 
               e.g. making your website. How will you plan it?
           Include a link to your troll board. </h1>
      <br>
-     I USE TRELLO AND I PLAN TO HAVE WELCOME PAGE 
+     <h3>I USE TRELLO AND I PLAN TO HAVE WELCOME PAGE 
      WITH IMAGE 
 And i will aud a video like and i will try to add uploading option 
 and  will have there option 
-More log in and new use contact us 
+More log in and new use contact us </h3>
 </br>
 
 <h1> 1.4 Describe the risks that might impact digital projects 
@@ -52,7 +69,7 @@ More log in and new use contact us
 
 </h1>
 <br>
-Nothing to say!!!!!!
+<h3> I do not have anything to say!!!!!!</h3> 
 </br>
 <h1>
         1.5 Describe how you would go about selecting and using IT
@@ -60,17 +77,18 @@ Nothing to say!!!!!!
           technology for the job? 
         </h1>
         <br>
-        I WILL SHOES THE PAST OF CODING TO LEAT WORK PROFESSIONAL
-         AND SECURE THE DATA AND THE LINK.    
+        <h3> I WILL SHOES THE PAST OF CODING TO LEAT WORK PROFESSIONAL
+         AND SECURE THE DATA AND THE LINK. <h3>   
     </br>
     <h1>1.6 Describe and provide analysis on how your chosen technologies 
         have helped you achieve your outcomes. 
         – How has trello helped you plan and how 
         can git and GitHub help with your codes version control </h1>
         <br>
-        I used Trello to manage the plan for my website. 
+       <h3> I used Trello to manage the plan for my website. 
         I used multiple lists to break down the plan further. 
-        This helped me manage my time well and sort out my daily tasks.
+        This helped me manage my time well and sort 
+        out my daily tasks.</h3>
     </br>
 
 
@@ -79,3 +97,5 @@ Nothing to say!!!!!!
 
 
 </div>
+</body>
+</html>
